--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     	<img src="images\logo.jpg" />
     	<h1>Loisir pour les étudiants !</h1>
     </header>
-    <aside>
+
+    <nav><!--Menu-->
     	<ul>
 	    	<li>Accueil</li>
 	    	<li>S'inscrire</li>
 	    	<li>Localiser une activité</li>
     	</ul>
-    </aside>
-    <section>
+    </nav>
+
+    <section><!-- Contenu-->
      	<h3>Notre but:</h3>
  		   <p>Notre site propose aux étudiants désireux de réaliser une ou plusieurs activités de loisir de rejoindre les différentes activités proposées dans la liste suivante en trois étapes:</p>
  		   	<ul>
