--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Atelier 2</title>
-    <link rel="stylesheet" href="css\style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
   </head>
 
   <body>
     <!-- page content -->
     <header>
-    	<img src="images\logo.jpg" />
+    	<img src="images/logo.jpg" alt="logo UQTR"/>
     	<h1>Loisir pour les étudiants !</h1>
     </header>
 
