--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
-    <title>Atelier 2</title>
+    <meta charset="utf-8" name="Author" content="CelineDupont, MarcoGuillemette, Leonnel Noundou">
+    <title>TP1</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
   </head>
 
-  <body>
-    <!-- page content -->
-    <header>
+  <body><!-- page content -->
+
+    <header><!--Entete-->
     	<img src="images/logo.jpg" alt="logo UQTR"/>
     	<h1>Loisir pour les étudiants !</h1>
     </header>
@@ -30,7 +30,7 @@
  		   		<li>Choisir une ou plusieurs activités</li>
  		   		<li>Commencer les activités en groupe</li>
  		   	</ul>
- 		   <p>Les différentes activités des groupes sont sous la responsabilité de professionnels. Il s'agit de passionnés du domaine qui vous ferons découvrir des pans inédits de vos loisirs préférés.  Qu'attendez-vous... ? Rejoidnez-nous !</p>
+
  		   <h3>Liste des activités disponibles</h3>
  		   <table>
  		   		<tr>
