--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
-    <title>Atelier 2</title>
+    <meta charset="utf-8" name="author" content="Celine Dupont, Marco Guillementte, Leonnel Noundou">
+    <title>TP1</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
   </head>
