--- a/index.html
+++ b/index.html
@@ -1,94 +1,93 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" name="author" content="Celine Dupont, Marco Guillementte, Leonnel Noundou">
-    <title>TP1</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	  <script type="application/javascript" src="./javascript/javascript.js"></script>
-  </head>
+<head>
+	<meta charset="utf-8" name="author" content="Celine Dupont, Marco Guillementte, Leonnel Noundou">
+	<title>TP1</title>
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="application/javascript" src="javascript/menu.js"></script>
+	<script type="application/javascript" src="./javascript/tableau.js"></script>
+</head>
 
-  <body>
-    <!-- page content -->
-    <header>
-    	<img src="images/logo.jpg" alt="logo UQTR"/>
-    	<h1>Loisir pour les étudiants !</h1>
-    </header>
+<body><!-- page content -->
+	<header>
+		<img src="images/logo.jpg" alt="logo UQTR"/>
+		<h1>Loisir pour les étudiants !</h1>
+	</header>
 
-    <nav><!--Menu-->
-    	<ul>
-	    	<li id="boutonAccueil">Accueil</li>
-	    	<li id="boutonInscription">S'inscrire</li>
-	    	<li id="boutonCarte">Localiser une activité</li>
-    	</ul>
-    </nav>
+	<nav><!--Menu-->
+		<ul>
+			<li id="boutonAccueil">Accueil</li>
+			<li id="boutonInscription">S'inscrire</li>
+			<li id="boutonCarte">Localiser une activité</li>
+		</ul>
+	</nav>
 
-    <section id="accueil"><!-- Contenu-->
-     	<h3>Notre but:</h3>
- 		   <p>Notre site propose aux étudiants désireux de réaliser une ou plusieurs activités de loisir de rejoindre les différentes activités proposées dans la liste suivante en trois étapes:</p>
- 		   	<ul>
- 		   		<li>S'inscrire</li>
- 		   		<li>Choisir une ou plusieurs activités</li>
- 		   		<li>Commencer les activités en groupe</li>
- 		   	</ul>
- 		   <p>Les différentes activités des groupes sont sous la responsabilité de professionnels. Il s'agit de passionnés du domaine qui vous ferons découvrir des pans inédits de vos loisirs préférés.  Qu'attendez-vous... ? Rejoidnez-nous !</p>
- 		   <h3>Liste des activités disponibles</h3>
- 		   <table>
- 		   		<tr>
- 		   			<th>#</th>
- 		   			<th>Activité</th>
- 		   			<th>Responsable</th>
- 		   			<th>Nombre d'inscrits</th>
- 		   		</tr>
- 		   		<tr>
- 		   			<td>1</td>
- 		   			<td>Natation</td>
- 		   			<td>Michel Provencher</td>
- 		   			<td>7</td>
- 		   		</tr>
- 		   		<tr>
- 		   			<td>2</td>
- 		   			<td>Badminton</td>
- 		   			<td>Daniel Lefevbre</td>
- 		   			<td>15</td>
- 		   		</tr>
- 		   		<tr>
- 		   			<td>1</td>
- 		   			<td>Randonnée</td>
- 		   			<td>Catherine Pelletier</td>
- 		   			<td>10</td>
- 		   		</tr>
- 		   		<tr>
- 		   			<td>3</td>
- 		   			<td>Kayak</td>
- 		   			<td>Josée Coté</td>
- 		   			<td>14 </td>
- 		   		</tr>
- 		   		<tr>
- 		   			<td>4</td>
- 		   			<td>Vélo</td>
- 		   			<td>Jean-Yves Surroy</td>
- 		   			<td>22</td>
- 		   		</tr>
- 		   		<tr>
- 		   			<td>5</td>
- 		   			<td>Échec</td>
- 		   			<td>Emilie Simard</td>
- 		   			<td>11</td>
- 		   		</tr>
-				
- 		   </table>
+	<section id="accueil"><!-- Contenu-->
+		<h3>Notre but:</h3>
+		<p>Notre site propose aux étudiants désireux de réaliser une ou plusieurs activités de loisir de rejoindre les différentes activités proposées dans la liste suivante en trois étapes:</p>
+		<ul>
+			<li>S'inscrire</li>
+			<li>Choisir une ou plusieurs activités</li>
+			<li>Commencer les activités en groupe</li>
+		</ul>
+		<p>Les différentes activités des groupes sont sous la responsabilité de professionnels. Il s'agit de passionnés du domaine qui vous ferons découvrir des pans inédits de vos loisirs préférés.  Qu'attendez-vous... ? Rejoidnez-nous !</p>
+		<h3>Liste des activités disponibles</h3>
 
-    </section>
-  <section id="inscription" class="inactif">
-	<p id="test">inscription a completer</p>
-  </section>
-  <section id="carte" class="inactif">
-	  <p>carte a completer</p>
-  </section>
+		<table>
+			<tr>
+				<th id="#">#</th>
+				<th id="activite">Activité</th>
+				<th id="responsable">Responsable</th>
+				<th id="nombre">Nombre d'inscrits</th>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</table>
+	</section>
 
+	<section id="inscription" class="inactif">
+		<p id="test">inscription a completer</p>
+	</section>
 
+	<section id="carte" class="inactif">
+		<p>carte a completer</p>
+	</section>
 
-  </body>
+</body>
 </html>
