--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
 	</section>
 
 	<section id="carte" class="inactif">
-		<p>carte a completer</p>
-
-
+		<!--<p>carte a completer</p>-->
+		<div id="map"></div>
+	    
+	    <script
+  			src="https://maps.googleapis.com/maps/api/js?callback=initMap&signed_in=true&key=AIzaSyD6_lta4zOOiy-yKrDXXu69Ph8d5Nptkss" async defer>
+		</script>
 	</section>
 
 </body>
