--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<meta charset="utf-8" name="author" content="Celine Dupont, Marco Guillementte, Leonnel Noundou">
+	<meta charset="utf-8">
+	<meta name="author" content="Celine Dupont, Marco Guillementte, Leonnel Noundou">
 	<title>TP1</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
+	<link rel="icon" href="./favicon.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="application/javascript" src="javascript/menu.js"></script>
+	<script type="application/javascript" src="./javascript/menu.js"></script>
 	<script type="application/javascript" src="./javascript/tableau.js"></script>
 	<script type="application/javascript" src="./javascript/formulaire.js"></script>
 </head>
@@ -26,14 +28,19 @@
 	</nav>
 
 	<section id="accueil"><!-- Contenu-->
+
 		<h3>Notre but:</h3>
+
 		<p>Notre site propose aux étudiants désireux de réaliser une ou plusieurs activités de loisir de rejoindre les différentes activités proposées dans la liste suivante en trois étapes:</p>
+
 		<ul>
 			<li>S'inscrire</li>
 			<li>Choisir une ou plusieurs activités</li>
 			<li>Commencer les activités en groupe</li>
 		</ul>
+
 		<p>Les différentes activités des groupes sont sous la responsabilité de professionnels. Il s'agit de passionnés du domaine qui vous ferons découvrir des pans inédits de vos loisirs préférés.  Qu'attendez-vous... ? Rejoidnez-nous !</p>
+
 		<h3>Liste des activités disponibles</h3>
 
 		<table>
@@ -80,38 +87,39 @@
 				<td></td>
 			</tr>
 		</table>
+
 	</section>
 
 
 	<section id="inscription" class="inactif"> <!-- section contenant l'inscription-->
 		<h3>Inscrivez-vous</h3>
 
-		<form method="post" onsubmit="return false" >
+		<form class="inactif" method="post" onsubmit="return false" >
 
 			<div>
-				<label>Nom</label>
-				<input type="text" name="lastname"/>
+				<label for="lastname">Nom</label>
+				<input id="lastname" type="text" name="lastname"/>
 			</div>
 
 			<div>
-				<label>Prénom</label>
-				<input type="text" name="firstname" />
+				<label for="firstname">Prénom</label>
+				<input id="firstname" type="text" name="firstname" />
 			</div>
 
 			<div>
-				<label>Date de naissance</label>
-				<input type="text" name="ddn" placeholder ="aaaa-mm-jj"/>
+				<label for="ddn">Date de naissance</label>
+				<input id="ddn" type="text" name="ddn" placeholder ="aaaa-mm-jj"/>
 			</div>
 
 			<div>
-				<label>Sexe : </label>
-				<input type="radio" name="sex" checked="checked" value="male"/>Homme
-				<input type="radio" name="sex" value="female"/> Femme
+				<label>Sexe :</label>
+				<input type="radio" name="sex" checked="checked" value="male" title="male"/>	Homme
+				<input type="radio" name="sex" value="female" title="female"/>	Femme
 			</div>
 
 			<div>
-				<label>Activité : </label>
-				<select name="activite">
+				<label for="choixActivite">Activité : </label>
+				<select id="choixActivite" name="activite">
 					<option value="badminton">Badminton</option>
 					<option value="echecs">Échecs</option>
 					<option value="kayak">Kayak</option>
@@ -122,8 +130,8 @@
 			</div>
 
 			<div>
-				<label id="motiv">Motivation :</label>
-				<textarea rows="8" cols="50" name="motivation" ></textarea>
+				<label for="motiv">Motivation :</label>
+				<textarea id="motiv" rows="8" cols="50" name="motivation" ></textarea>
 			</div>
 
 			<div>
@@ -135,10 +143,15 @@
 	</section>
 
 	<section id="carte" class="inactif">
-		<p>carte a completer</p>
 
+		<h3>Carte</h3>
+
+		<div id="map"></div>
+
+		<script src="https://maps.googleapis.com/maps/api/js?callback=initMap&signed_in=true&key=AIzaSyD6_lta4zOOiy-yKrDXXu69Ph8d5Nptkss" async defer></script>
 
 	</section>
 
 </body>
+
 </html>
